# tradingo

./: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
src/monitor/: __main__.py  app.py
src/scripts/: copy_arctic_data.py
src/tradingo/: __init__.py  _backtest.pyx  api.py  backtest.py  caching.py  cli.py  config.py  dag.py  engine.py  execution_plan.py  logging.yaml  plotting.py  portfolio.py  runner.py  scheduler.py  service.py  settings.py  symbols.py  utils.py  worker.py
src/tradingo/backfill/: dukascopy.py  forexsb.py
src/tradingo/engine/: ib.py  ig.py
src/tradingo/notifications/: email.py
src/tradingo/sampling/: __init__.py  dukascopy.py  ib.py  ig.py  instruments.py  quality.py  rss.py  yf.py
src/tradingo/templates/: downstream_tasks.yaml  portfolio_construction.yaml  rss.yaml
src/tradingo/templates/instruments/: dukascopy.yaml  ib-trading.yaml  ig-trading.yaml  yfinance.yaml
test/tradingo/: _dag_helpers.py  conftest.py  test_api.py  test_backtest.py  test_caching.py  test_cli.py  test_config.py  test_dag.py  test_dag_celery_batched.py  test_dag_multiprocess.py  test_dag_parallel.py  test_dag_run.py  test_engine.py  test_env_provider.py  test_execution_plan.py  test_portfolio.py  test_sampling.py  test_sampling_ib.py  test_scheduler.py  test_service.py  test_symbols.py  test_templates.py  utils.py
test/tradingo/test_engine/: test_ib.py  test_ig.py
tests/notifications/: test_email.py
tests/sampling/: test_quality.py  test_yf.py
