[project]
name = "tradingo"
dynamic = ["version"]
authors = [
  { name="Rory McStay", email="rory@rorymcstay.com" },
]
requires-python = ">= 3.11"
description = "Instrument price store"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
  "numba",
  "pandas",
  "pandera",
  "arcticdb",
  "PyYAML",
  "yfinance",
  "lxml",
  "pandas_market_calendars",
  "trading_ig",
  "riskfolio-lib",
  "tenacity",
  "lightgbm>=4.6.0",
  "pycountry",
  "ipython>=9.1.0",
  "tabula>=1.0.5",
  "tabula-py>=2.10.0",
  "dukascopy-python",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-benchmark",
  "black",
  "isort",
  "ruff>=0.11.5",
  "mypy>=1.15.0",
  "debugpy>=1.8.13",
  "pre-commit>=3.6.0",
  "pandas-stubs>=2.3.3.260113",
  "pytest-cov>=7.0.0",
  "types-requests>=2.32.4.20260107",
  "httpx>=0.28.1",
  "types-croniter>=6.0.0.20250809",
  "fakeredis>=2.35.1",
  "pytest-xdist[psutil]>=3.8.0",
]
research = [
  "dtale",
  "jupyter",
]
monitor = [
  "dash>=2.18.2",
  "dash-bootstrap-components>=1.5.0",
]
serve = [
  "croniter>=6.0.0",
  "fastapi",
]
worker = [
  "celery>=5.0",
  "redis>=4.0",
]
ib = [
  "ib_insync",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tradingo.templates" = ["*.yaml"]

[build-system]
requires = [
  "cython",
  "numpy",
  "setuptools>=64",
  "setuptools_scm>=8",
]

[tool.black]
line-length = 88
target-version = ['py311']

[project.scripts]
tradingo-cli = "tradingo.cli:main"
tradingo-engine-ib = "tradingo.engine.ib:main"
tradingo-monitor = "monitor.app:main"

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = [
  "src/monitor"
]

[[tool.mypy.overrides]]
module = [
  "celery",
  "celery.*",
  "redis",
  "redis.*",
  "pandas.plotting._matplotlib.style",
  "arcticdb",
  "arcticdb.*",
  "arcticdb_ext",
  "arcticdb_ext.*",
  "dateutil",
  "dateutil.*",
  "sklearn.*",
  "yfinance",
  "riskfolio",
  "yaml",
  "setuptools",
  "numba",
  "pandas_market_calendars",
  "trading_ig.*",
  "dukascopy_python",
  "dukascopy_python.*",
  "Cython.*",
  "dash",
  "requests.exceptions",
  "uvicorn",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "ib_insync",
  "ib_insync.*",
]
ignore_missing_imports = true
follow_imports = "skip"
strict = true

[tool.coverage.run]
source = ["src/tradingo"]
branch = true
omit = [
  "src/tradingo/templates/*",
  "src/monitor/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
